@@ -6,9 +6,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -23,45 +21,18 @@ class LocationControllerTest {
     @InjectMocks
     LocationController locationController;
 
-//    @Test
-//    void testGetLocations() {
-//        List<LocationDto> locations = Arrays.asList(
-//                new LocationDto(1L,"Sydney", -33.88223, 151.33140)
-//        );
-//        when(locationService.getLocations(any())).thenReturn(locations);
-//        List<LocationDto> expected = locationController.getLocations(Optional.empty());
-//
-//        assertThat(expected)
-//                .hasSize(1)
-//                .extracting(LocationDto::getName)
-//                .containsOnly("Sydney");
-//    }
+    @Test
+    void testGetLocations() {
+        List<LocationDto> locations = List.of(
+                new LocationDto(1L, "Mallorca", -30.88223, 112.33140)
+        );
+        when(locationService.getLocations(any())).thenReturn(locations);
 
-//    @Test
-//    void testGetLocations() {
-//        List<LocationDto> locations = Arrays.asList(
-//                new LocationDto(1L,"Mallorca", -30.88223, 112.33140)
-//        );
-//        when(locationService.getLocations()).thenReturn(locations);
-//        List<LocationDto> expected = locationController.getLocations();
-//
-//        assertThat(expected)
-//                .hasSize(1)
-//                .extracting(LocationDto::getName)
-//                .containsOnly("Mallorca");
-//    }
-//
-//    @Test
-//    void testGetLocations() {
-//        List<LocationDto> locations = Arrays.asList(
-//                new LocationDto(1L, "Mallorca", -30.88223, 112.33140)
-//        );
-//        when(locationService.getLocations(any())).thenReturn(locations);
-//        List<LocationDto> expected = locationController.getLocations(Optional.empty());
-//
-//        assertThat(expected)
-//                .hasSize(1)
-//                .extracting(LocationDto::getName)
-//                .containsOnly("Mallorca");
-//    }
+        List<LocationDto> expected = locationController.getLocations(new QueryParameters());
+
+        assertThat(expected)
+                .hasSize(1)
+                .extracting(LocationDto::getName)
+                .containsOnly("Mallorca");
+    }
 }
